[gd_scene load_steps=4 format=3 uid="uid://b7d5rmrbmprps"]

[ext_resource type="Script" path="res://scripts/parallax_movement/centralized_parallax_movement.gd" id="1_7u43o"]
[ext_resource type="Texture2D" uid="uid://d0xety1ri8oe0" path="res://assets/textures/prototypes/passing_test_bg.png" id="2_vkmen"]
[ext_resource type="Texture2D" uid="uid://d2u4ngxnf3vdw" path="res://assets/textures/prototypes/passing_test_firstp_bg.png" id="4_xn3gk"]

[node name="ParallaxTemplate" type="ParallaxBackground"]
script = ExtResource("1_7u43o")

[node name="L_03" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2(940, 0)

[node name="L_03_img" type="Sprite2D" parent="L_03"]
show_behind_parent = true
scale = Vector2(1, 1.00185)
texture = ExtResource("2_vkmen")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 960, 540)

[node name="L_02" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2(1185, 0)

[node name="L_02_img" type="Sprite2D" parent="L_02"]
position = Vector2(-9, 411)
scale = Vector2(1.24051, 0.731958)
texture = ExtResource("4_xn3gk")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 790, 194)

[node name="L_01" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2(1185, 0)

[node name="L_01_img" type="Sprite2D" parent="L_01"]
position = Vector2(-3, 453)
scale = Vector2(1.5, 0.5)
texture = ExtResource("4_xn3gk")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 790, 194)
